--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: 1-plikowe aplikacje html
-email: akubaszek@op.pl
+email: kubaszek@prz.edu.pl
 description: >- # this means to ignore newlines until "baseurl:"
   Aplikacje w postaci 1 pliku HTML uruchamianego lokalnie wykorzystujące silnik przeglądarki. 
   Może to być jedyny, samodzielny plik HTML (off-line), albo 1 plik wykorzystujący jakieś otwarte zasoby internetowe.
