gem "jekyll", "~> 4.3.3" i niestety gem "minima", "~> 2.5.1" z błędami _base.scss: Deprecation Warning: Using / for division outside of calc()

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,9 @@
 minima:
   date_format: "%d.%m.%Y"
 
+sass: 
+  quiet_deps: true
+
 show_excerpts: true
 # - UWAGA - gdy końce wierszy: \r\n to fatalnie działa w jekyll - wyświetla całe artykuły; muszą być \n na końcu
 
